1. 유저, 보안, 로그인 기능 제외 결정. - domain, repository, DB table 정리.
2. caseA, caseB기준으로 코드 갈무리.

3. 어플 제작 후 테스팅 예정.