@@ -33,13 +33,15 @@ import java.util.stream.Collectors;
 @Transactional(readOnly = true)
 public class InteractionCheckService {
 
+    private static final int DELAY_MS_BETWEEN_AI_CALLS = 1500;
+
     private final DrugsMasterRepository drugsMasterRepository;
     private final DrugIngredientRepository drugIngredientRepository;
     private final DrugPermitDetailRepository drugPermitDetailRepository;
     private final AiServerClient aiServerClient;
 
     /**
-     * 여러 처방약 + 영양제 상호작용 병렬 검사
+     * 여러 처방약 + 영양제 상호작용 순차 검사
      * @param request drugIds(필수), supplements(기복용 영양제 목록)
      */
     public InteractionCheckResponseDto checkInteraction(InteractionCheckRequestDto request) {
@@ -48,33 +50,33 @@ public class InteractionCheckService {
         }
 
         List<DrugsMaster> drugs = drugsMasterRepository.findAllById(request.getDrugIds());
-        if (drugs.isEmpty()) {
-            throw new IllegalArgumentException("요청한 처방약을 DB에서 찾을 수 없습니다.");
-        }
+        DrugIdLookupValidator.assertAllRequestedIdsExist(request.getDrugIds(), drugs);
 
         List<AiInteractionRequest.SupplementInput> mappedSupplements = mapSupplements(request.getSupplements());
 
-        // LLM 과부하 및 빈 응답 방지를 위해 순차 호출 및 지연(delay) 적용
         List<InteractionCheckResponseDto.InteractionItem> allInteractions = new ArrayList<>();
-        
+
         for (int i = 0; i < drugs.size(); i++) {
-            if (i > 0) {
-                try {
-                    // 각 API 호출 사이에 1.5초(1500ms) 대기 시간을 두어 모델 부하를 줄임
-                    Thread.sleep(1500);
-                } catch (InterruptedException e) {
-                    Thread.currentThread().interrupt();
-                }
-            }
-            
+            delayBeforeNextDrugIfNeeded(i);
             DrugsMaster drug = drugs.get(i);
-            List<InteractionCheckResponseDto.InteractionItem> items = processSingleDrug(drug, mappedSupplements);
-            allInteractions.addAll(items);
+            allInteractions.addAll(processSingleDrug(drug, mappedSupplements));
         }
 
         return InteractionCheckResponseDto.builder()
                 .interactions(allInteractions)
                 .build();
+    }
+
+    /** 두 번째 약부터 호출 사이에 대기해 LLM 부하를 줄인다. 인터럽트 시 플래그만 복원하고 나머지 약은 계속 처리한다. */
+    private void delayBeforeNextDrugIfNeeded(int index) {
+        if (index <= 0) {
+            return;
+        }
+        try {
+            Thread.sleep(DELAY_MS_BETWEEN_AI_CALLS);
+        } catch (InterruptedException e) {
+            Thread.currentThread().interrupt();
+        }
     }
 
     /** 단일 약품에 대한 AI 상호작용 검사 수행 */
@@ -87,22 +89,13 @@ public class InteractionCheckService {
                 .distinct()
                 .collect(Collectors.toList());
 
-        // fallback: drug_ingredient 테이블에 성분이 없을 경우 drug_permit_detail 조회
         if (ingredients.isEmpty()) {
             Optional<DrugPermitDetail> permitDetail = drugPermitDetailRepository.findByItemSeq(drug.getItemSeq());
-            if (permitDetail.isPresent() && permitDetail.get().getIngrNameEng() != null && !permitDetail.get().getIngrNameEng().isBlank()) {
+            if (permitDetail.isPresent() && permitDetail.get().getIngrNameEng() != null
+                    && !permitDetail.get().getIngrNameEng().isBlank()) {
                 ingredients.add(permitDetail.get().getIngrNameEng());
             } else {
-                // 둘 다 없으면 해당 약품의 성분명을 확인할 수 없다는 메시지를 포함한 InteractionItem 직접 반환 (LLM 호출 생략)
-                return List.of(InteractionCheckResponseDto.InteractionItem.builder()
-                        .drugName(drug.getItemName())
-                        .nutrient("알 수 없음")
-                        .contraindicatedDrugIngredient("데이터 없음")
-                        .level("CAUTION")
-                        .description("'" + drug.getItemName() + "' 약품의 성분 데이터가 부족하여 정밀 분석을 진행할 수 없습니다.")
-                        .actionGuide("해당 약품을 복용하는 동안에는 영양제 복용 전 반드시 전문가와 상담하세요.")
-                        .sources(Collections.emptyList())
-                        .build());
+                return List.of(fallbackNoIngredientData(drug.getItemName()));
             }
         }
 
@@ -120,16 +113,32 @@ public class InteractionCheckService {
             return mapToResponseItems(aiResponse, drug.getItemName());
         } catch (RestClientException e) {
             log.warn("AI 서버 호출 실패 (drug: {}). fallback 메시지 반환: {}", drug.getItemName(), e.getMessage());
-            return List.of(InteractionCheckResponseDto.InteractionItem.builder()
-                    .drugName(drug.getItemName())
-                    .nutrient("알 수 없음")
-                    .contraindicatedDrugIngredient("데이터 없음")
-                    .level("CAUTION")
-                    .description("'" + drug.getItemName() + "'에 대한 AI 분석 서비스를 일시적으로 사용할 수 없습니다.")
-                    .actionGuide("영양제 복용 전 반드시 의사 또는 약사와 상담하시기 바랍니다.")
-                    .sources(Collections.emptyList())
-                    .build());
+            return List.of(fallbackAiUnavailable(drug.getItemName()));
         }
+    }
+
+    private static InteractionCheckResponseDto.InteractionItem fallbackNoIngredientData(String drugName) {
+        return InteractionCheckResponseDto.InteractionItem.builder()
+                .drugName(drugName)
+                .nutrient("알 수 없음")
+                .contraindicatedDrugIngredient("데이터 없음")
+                .level("CAUTION")
+                .description("'" + drugName + "' 약품의 성분 데이터가 부족하여 정밀 분석을 진행할 수 없습니다.")
+                .actionGuide("해당 약품을 복용하는 동안에는 영양제 복용 전 반드시 전문가와 상담하세요.")
+                .sources(Collections.emptyList())
+                .build();
+    }
+
+    private static InteractionCheckResponseDto.InteractionItem fallbackAiUnavailable(String drugName) {
+        return InteractionCheckResponseDto.InteractionItem.builder()
+                .drugName(drugName)
+                .nutrient("알 수 없음")
+                .contraindicatedDrugIngredient("데이터 없음")
+                .level("CAUTION")
+                .description("'" + drugName + "'에 대한 AI 분석 서비스를 일시적으로 사용할 수 없습니다.")
+                .actionGuide("영양제 복용 전 반드시 의사 또는 약사와 상담하시기 바랍니다.")
+                .sources(Collections.emptyList())
+                .build();
     }
 
     private List<AiInteractionRequest.SupplementInput> mapSupplements(
